[gd_scene load_steps=29 format=2]

[ext_resource path="res://art/character/zombies/zombiewithidle.png" type="Texture" id=1]
[ext_resource path="res://art/character/animals/dog-placeholder.png" type="Texture" id=2]
[ext_resource path="res://script/actor.gd" type="Script" id=3]
[ext_resource path="res://script/bump-manager.gd" type="Script" id=4]
[ext_resource path="res://art/character/zombies/Zombie_full_spritesheet.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 192, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 224, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 68 ) ],
"loop": true,
"name": "dog-idle",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ) ],
"loop": true,
"name": "dog-walk",
"speed": 5.0
}, {
"frames": [ SubResource( 70 ) ],
"loop": true,
"name": "dog-die",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 28.4444, 42.6667 )

[sub_resource type="CircleShape2D" id=29]
radius = 64.0

[sub_resource type="CircleShape2D" id=30]
radius = 654.309

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 10, 5 )

[sub_resource type="RectangleShape2D" id=66]
extents = Vector2( 21.3333, 31 )

[sub_resource type="RectangleShape2D" id=67]
extents = Vector2( 21.3333, 5.33335 )

[sub_resource type="CapsuleShape2D" id=34]
height = 44.0

[node name="actor" type="KinematicBody2D"]
position = Vector2( -8.39233e-05, 0 )
scale = Vector2( 0.375, 0.375 )
z_index = 2
collision_layer = 0
collision_mask = 19
script = ExtResource( 3 )

[node name="atk-timer" type="Timer" parent="."]
process_mode = 0

[node name="idle-timer" type="Timer" parent="."]
process_mode = 0

[node name="dead" type="Timer" parent="."]
wait_time = 5.0

[node name="costumes" type="AnimatedSprite" parent="."]
position = Vector2( 0.000111898, 4.76837e-07 )
scale = Vector2( 2.33333, 2.33333 )
frames = SubResource( 27 )
animation = "dog-idle"
playing = true

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( 0.000112534, 5.68434e-14 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 28 )
one_way_collision = true
one_way_collision_margin = 5.0

[node name="atk-radius" type="Area2D" parent="."]
position = Vector2( 3.8147e-06, 0 )

[node name="area" type="CollisionShape2D" parent="atk-radius"]
position = Vector2( 0.000108083, 0 )
shape = SubResource( 29 )

[node name="follow-radius" type="Area2D" parent="."]
visible = false

[node name="area" type="CollisionShape2D" parent="follow-radius"]
light_mask = 4
position = Vector2( 28.4444, 0 )
shape = SubResource( 30 )

[node name="hitbox" type="Area2D" parent="."]
rotation = 6.28319

[node name="area" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -21.3332, 10.6667 )
shape = SubResource( 35 )

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2( -2.66663, -2.66667 )

[node name="area" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 2.66675, 3.66669 )
shape = SubResource( 66 )

[node name="foot" type="Area2D" parent="."]
position = Vector2( -2.66663, 0 )

[node name="area" type="CollisionShape2D" parent="foot"]
position = Vector2( 2.66699, 40.0001 )
shape = SubResource( 67 )

[node name="bump-manager" type="Area2D" parent="."]
position = Vector2( 3.8147e-06, 0 )
collision_layer = 8
collision_mask = 8
script = ExtResource( 4 )

[node name="collision" type="CollisionShape2D" parent="bump-manager"]
position = Vector2( 0.000108083, 32 )
rotation = 1.5708
shape = SubResource( 34 )

[node name="effect" type="Tween" parent="."]

[connection signal="timeout" from="atk-timer" to="." method="_on_atktimer_timeout"]
[connection signal="timeout" from="idle-timer" to="." method="_on_idletimer_timeout"]
[connection signal="timeout" from="dead" to="." method="_on_dead_timeout"]
[connection signal="body_entered" from="atk-radius" to="." method="_on_atkradius_body_entered"]
[connection signal="body_exited" from="atk-radius" to="." method="_on_atkradius_body_exited"]
[connection signal="body_entered" from="follow-radius" to="." method="_on_followradius_body_entered"]
[connection signal="body_exited" from="follow-radius" to="." method="_on_followradius_body_exited"]
